article page, amortization, hover effects

--- a/#src/scss/base/base.scss
+++ b/#src/scss/base/base.scss
@@ -3,6 +3,7 @@ body {
     font-weight: $fontWeight;
     font-size: $fontSize;
     line-height: $lineHeight;
+    letter-spacing: 0.2px;
     color: $Black;
     overflow-x: hidden;
 
